# fints-postbank

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  api-mode.bat  bot-mode.bat  code_analysis_rules.json  list-accounts.bat  list-tan.bat  pyproject.toml  start.bat  telegram.bat  test-bot.bat  transfer-mode.bat
docs/: API_MODE.md  SEPA_TRANSFER.md  SESSION.md  TRANSFER_API_MODE.md
src/fintts_postbank/: __init__.py  api_client.py  api_transfer.py  client.py  list_accounts_mode.py  list_tan_mode.py  logger.py  main.py  menu.py  operations.py  process_transfers_mode.py  tan.py  telegram_mode.py  test_bot_mode.py  transaction_db.py  ui.py  update_api_mode.py  update_bot_mode.py  xmpp_mode.py
src/fintts_postbank/config/: __init__.py  accounts.py  constants.py  settings.py
src/fintts_postbank/io/: __init__.py  base.py  console.py  helpers.py  telegram.py  xmpp.py
tests/: __init__.py  test_config.py
tools/: analyze_code.bat  fix_ruff_issues.bat  fix_ruff_issues_dry_run.bat
