[project]
name = "fintts-postbank"
version = "0.1.0"
description = "FinTS client for Postbank banking operations"
requires-python = ">=3.12"
dependencies = [
    "fints>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "telegram-bot",
    "xmpp-bot",
]

[tool.uv.sources]
telegram-bot = { path = "D:\\GIT\\BenjaminKobjolke\\telegram-bot", editable = true }
xmpp-bot = { path = "D:\\GIT\\BenjaminKobjolke\\xmpp-bot", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
fints-postbank = "fintts_postbank.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fintts_postbank"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
